--- a/src/presentation/ui/Input/inputVariables.scss
+++ b/src/presentation/ui/Input/inputVariables.scss
@@ -1,18 +1,15 @@
 @mixin input {
   background: var(--input-background);
-  border-color: var(--input-border);
-  border-style: solid;
-  border-width: 0;
-  border-radius: 0;
-  border-bottom-width: 2px;
-  box-shadow: none;
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 0px 0px 40px -30px rgba(97, 96, 96, 0.88);
   color: var(--main-text-color);
   font-family: var(--main-font);
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
-  height: 36px;
-  line-height: 36px;
-  padding: 0 10px;
+  height: 56px;
+  line-height: 56px;
+  padding: 0 20px;
 
   &::placeholder {
     color: var(--input-placeholder-color);
@@ -22,11 +19,14 @@
   &:focus {
     color: var(--main-text-color);
     border-color: var(--secondary-color);
+    box-shadow: 0px 0px 40px -20px rgba(78, 110, 255, 0.88);
   }
 }
 
 @mixin inputError {
   border-color: var(--error-color);
+  box-shadow: 0px 0px 30px -10px rgba(255, 56, 56, 0.88);
+  color: var(--error-color);
 }
 
 @mixin inputErrorMessage {
