--- a/src/presentation/ui/InputWrapper/inputWrapperVariables.scss
+++ b/src/presentation/ui/InputWrapper/inputWrapperVariables.scss
@@ -1,3 +1,5 @@
+@import 'styles/animations';
+
 @mixin inputWrapper {
   color: var(--main-text-color);
 }
@@ -9,6 +11,7 @@
 }
 
 @mixin inputWrapperError {
+  animation: fadeInDown 0.5s ease;
   background: var(--error-color-bg);
   border-radius: 8px;
   align-items: center;
@@ -17,10 +20,12 @@
   font-family: var(--main-font);
   font-size: 16px;
   font-weight: 500;
-  margin-top: 5px;
+  margin-top: 0;
+  margin-bottom: 10px;
   padding: 10px;
   width: 100%;
-
+  transition: all 0.4s ease;
+  z-index: -2;
   & > svg {
     margin-right: 10px;
   }
