--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -15,6 +15,7 @@
   z-index: 1;
   @include media-breakpoint-down(sm) {
     width: calc(100% - 20px);
+    overflow: hidden;
   }
 }
 
@@ -22,6 +23,9 @@
   animation: fadeIn ease 3s;
   padding: 0.75rem;
   margin-bottom: 130px;
+  @include media-breakpoint-down(sm) {
+    margin-bottom: 0;
+  }
 }
 
 .brandImg {
@@ -83,8 +87,13 @@
   z-index: -2;
   width: 90%;
   @include media-breakpoint-down(sm) {
-    display: none;
-    position: initial;
+    height: 190px;
+    width: 300px;
+    top: -47px;
+    bottom: initial;
+    left: initial;
+    right: -194px;
+    transform: scale(2);
   }
 }
 
