--- a/src/presentation/ui/Button/button.module.scss
+++ b/src/presentation/ui/Button/button.module.scss
@@ -9,7 +9,7 @@
   min-width: 70px;
   outline: none;
   position: relative;
-  transition: all 200ms ease-out;
+  transition: all 400ms ease-in;
   text-decoration: none;
   width: fit-content;
 
@@ -26,11 +26,11 @@
 
   &:hover:not(:disabled),
   &:focus:not(:disabled) {
-    transition: all 200ms ease-out, transform 1ms;
+    transition: all 400ms ease-out, transform 1ms;
   }
 
   &:active:not(:disabled) {
-    transition: all 200ms ease;
+    transition: all 400ms ease;
   }
 
   @include defaultButtonAttributes;
@@ -76,7 +76,7 @@
   }
 
   &.isLoading {
-    transition: all 200ms ease-out, transform 1ms;
+    transition: all 400ms ease-out, transform 1ms;
 
     @include isLoadingButtonAttributes;
   }
