--- a/src/presentation/ui/Button/buttonVariables.scss
+++ b/src/presentation/ui/Button/buttonVariables.scss
@@ -12,8 +12,8 @@ $buttonHeightSmallest: 22px;
   border-radius: 10px;
   color: var(--button-default-color);
   font-family: var(--font-family-blenderpro-medium);
-  font-size: 16px;
-  line-height: 16px;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
   height: $buttonHeightNormal;
   padding: 0 20px;
 
@@ -145,20 +145,20 @@ $buttonHeightSmallest: 22px;
 @mixin smallButtonAttributes {
   border-radius: 18px;
   height: $buttonHeightSmall;
-  font-size: 13px;
-  line-height: 14px;
+  font-size: 1rem;
+  line-height: 1.2rem;
   padding: 0 10px;
 
   @include media-breakpoint-down(sm) {
     height: $buttonHeightNormal;
-    font-size: 15px;
+    font-size: 1rem;
   }
 }
 
 @mixin smallestButtonAttributes {
   border-radius: 18px;
   height: $buttonHeightSmallest;
-  font-size: 12px;
+  font-size: 1rem;
   padding-left: 10px;
   padding-right: 10px;
 }
