--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -29,3 +29,19 @@
     transform: translateY(0);
   }
 }
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0.01;
+    width: 100%;
+    height: 100%;
+  }
+  100% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+}
