--- a/src/presentation/Layout/layout.module.scss
+++ b/src/presentation/Layout/layout.module.scss
@@ -4,9 +4,15 @@
 
 .wrapper {
   @include wrapper;
+  // @include media-breakpoint-down(sm) {
+  //   height: auto;
+  // }
 }
 
 .layout {
   @include box;
   display: flex;
+  // @include media-breakpoint-down(sm) {
+  //   height: auto;
+  // }
 }
