--- a/src/pages/Projects/projects.module.scss
+++ b/src/pages/Projects/projects.module.scss
@@ -1,5 +1,5 @@
-.about {
-  background: lightblue;
-  color: green;
-  height: 100%;
+.projects {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
