--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,9 +6,12 @@
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   padding: 2rem;
-  height: 100%;
+  // height: auto;
+  // min-height: 100vh;
   @include media-breakpoint-down(sm) {
     padding: 1rem;
+    // height: auto;
+    // min-height: 100%;
   }
 }
 
@@ -22,13 +25,8 @@
   grid-template-areas: 'centerLeft centerRight';
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
-  height: 100%;
   @include media-breakpoint-down(sm) {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: minmax(20%, 80vmax);
-    grid-template-areas:
-      'centerLeft'
-      'centerRight';
+    display: flex;
+    flex-direction: column;
   }
 }
