--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,12 +6,12 @@
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   padding: 2rem;
-  // height: auto;
-  // min-height: 100vh;
+  height: auto;
+  min-height: 100vh;
   @include media-breakpoint-down(sm) {
     padding: 1rem;
-    // height: auto;
-    // min-height: 100%;
+    height: auto;
+    min-height: 100%;
   }
 }
 
@@ -28,5 +28,7 @@
   @include media-breakpoint-down(sm) {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    min-height: 70vh;
   }
 }
