--- a/src/presentation/Card/card.module.scss
+++ b/src/presentation/Card/card.module.scss
@@ -32,12 +32,12 @@
 }
 
 .cardContent {
-  background: linear-gradient(to bottom left, #7795f7 40%, #3c70ff 100%);
+  background: linear-gradient(to bottom left, #e2e2e2 40%, #b8b8b8 100%);
   padding: 1rem;
 }
 
 .cardTitle {
-  color: #ffffff;
+  color: var(--main-text-color);
   font-size: 1.1rem;
   font-weight: 700;
   letter-spacing: 1px;
@@ -46,7 +46,7 @@
 }
 
 .cardText {
-  color: #ffffff;
+  color: var(--main-text-color);
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
