--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -52,7 +52,7 @@
   display: flex;
   grid-area: centerRight;
   justify-content: center;
-  height: 100%;
+  // height: 100%;
   @include media-breakpoint-down(sm) {
     align-items: flex-start;
     justify-content: flex-start;
