--- a/src/pages/Logout/logout.module.scss
+++ b/src/pages/Logout/logout.module.scss
@@ -5,6 +5,7 @@
   animation: fadeOut 2.2s ease;
   background: lightblue;
   display: flex;
-  height: 100%;
+  min-height: 100vh;
+  height: 100vh;
   justify-content: center;
 }
