--- a/src/presentation/CardProject/cardProject.module.scss
+++ b/src/presentation/CardProject/cardProject.module.scss
@@ -25,10 +25,18 @@
   overflow: hidden;
 }
 
+.cardImageBox {
+  overflow: hidden;
+  height: 130px;
+}
+
 .cardImage {
   height: auto;
-  max-width: 100%;
+  width: 100%;
   vertical-align: middle;
+  object-fit: cover;
+  object-position: top;
+  overflow: hidden;
 }
 
 .cardContent {
