--- a/src/presentation/ui/Loader/loader.module.scss
+++ b/src/presentation/ui/Loader/loader.module.scss
@@ -3,6 +3,7 @@
 
 .loaderWrap {
   align-items: center;
+  border-radius: 25px;
   background-color: rgba($color: #000000, $alpha: 0.3);
   display: flex;
   height: 100%;
