--- a/src/presentation/ui/Title/title.module.scss
+++ b/src/presentation/ui/Title/title.module.scss
@@ -1,11 +1,19 @@
 @import 'styles/breakpoints';
 
 .title {
+  display: flex;
+  flex-direction: row;
   font-size: 3rem;
   line-height: 3rem;
   font-weight: 700;
   @include media-breakpoint-down(sm) {
     font-size: 2rem;
     line-height: 2rem;
+  }
+
+  svg {
+    margin-right: 1rem;
+    width: 50px;
+    height: auto;
   }
 }
